--- a/templates/_seo.html.twig
+++ b/templates/_seo.html.twig
@@ -1,9 +1,9 @@
-{% set title = title|default('Secret Santa App - The Secret Santa bot for your Slack or Discord team') %}
-{% set description = description|default('A free application to throw Secret Santa with your team on Slack and Discord and share gifts during the holidays!') %}
+{% set title = title|default('FireFight Targeting App - The Nerf Battle Royale bot for your Slack or Discord team') %}
+{% set description = description|default('An application to run a Nerf Battle Royale with your team on Slack and Discord!') %}
 
 <title>{{ title }}</title>
 <meta name="description" content="{{ description }}">
-<meta name="author" content="JoliCode">
+<meta name="author" content="Scyne">
 <meta property="og:type" content="website" />
 <meta property="og:title" content="{{ title }}" />
 <meta property="og:description" content="{{ description }}" />
