--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -9,11 +9,11 @@
             <div class="snow middleground layered"></div>
 
             <div class="jumbotron-inner">
-                <h1>Throw a Secret Santa with<br> your team!</h1>
+                <h1>Run a Nerf Battle with<br> your team!</h1>
 
                 <p>
                     <strong>Randomly</strong> assign to each member of your <strong>team</strong> (colleagues, friends or family)
-                    a person to whom they anonymously <strong>give a gift</strong>.
+                    a person to whom they <strong>must take out</strong>.
                 </p>
 
                 <div class="actions">
@@ -38,16 +38,12 @@
         </div>
 
         <div class="content what-block">
-            <h2 class="content-head is-center">What is a Secret Santa?</h2>
+            <h2 class="content-head is-center">What is FireFight?</h2>
 
-            <q><strong>Secret Santa</strong> is a Western Christmas tradition in which members of a group or
-                community are <strong>randomly</strong> assigned a person to whom they anonymously <strong>give a gift</strong>.
-                The identity of the gift giver is a <strong>secret</strong> not to be revealed.</q>
-
-            <p>
-                This tradition is also known as "<strong>Kris Kringle</strong>" in Ireland, "<strong>Wichteln</strong>" or "<strong>Engerl und Bengerl</strong>" in Germany,
-                "<strong>Amigo invisible</strong>" in Spain and "<strong>Cacahuète</strong>" in Belgium.
-            </p>
+            <q><strong>FireFight</strong> is an office Nerf Game that fuels our <strong>competitive</strong>
+            nature and helps us <strong>connect</strong> with our coworkers in a unique way. The rules are setup
+            in such a way as to avoid effecting productivity while still giving players a break
+            and <strong>unique way to release stress.</strong></q>
         </div>
 
         <div class="content how-block">
@@ -59,7 +55,7 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>1. Connect to Your Application</h3>
-                    <p>Click on one of the "Run on Slack" or "Run on Discord" buttons above to authorize Secret Santa to access your account.</p>
+                    <p>Click on one of the "Run on Slack" or "Run on Discord" buttons above to authorize FireFight to access your account.</p>
                 </div>
             </section>
 
@@ -69,7 +65,7 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>2. Select Users</h3>
-                    <p>We show you all the users in your team (excluding the bots, because they don't do nice gifts). Just select the ones which will take part to your Secret Santa.</p>
+                    <p>We show you all the users in your team (excluding the bots, because they have wall-hack). Just select the ones which will take part to your battle.</p>
                 </div>
             </section>
 
@@ -79,17 +75,17 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>3. Inform Users</h3>
-                    <p>After <a href="https://github.com/jolicode/secret-santa/blob/master/src/Santa/Rudolph.php">Rudolph</a> shuffled the users, we throw at each participant a private message with his peer name and an optional admin message.</p>
+                    <p>After <a href="https://github.com/Scyne/FireFight/blob/master/src/Santa/Rudolph.php">the algorithm</a> shuffled the users, we throw at each participant a private message with their target's name and an optional admin message.</p>
                 </div>
             </section>
 
             <section class="step-feature reverse">
                 <div class="step-feature-image">
-                    <img src="{{ asset('images/step-buy.png') }}" alt="Buy a Gift">
+                    <img src="{{ asset('images/step-buy.png') }}" alt="Take out your target">
                 </div>
                 <div class="step-feature-text">
-                    <h3>4. Buy a Gift</h3>
-                    <p>Everything is now setup. Just go buy a gift for your peer before your party. Merry Christmas!</p>
+                    <h3>4. Start the game</h3>
+                    <p>Everything is now setup. Just plan your attack!</p>
                 </div>
             </section>
         </div>
@@ -100,37 +96,13 @@
                     <h2 class="content-head">Private message sent to users</h2>
 
                     <p>
-                        Each user will receive a private message to inform them of their peer name.
+                        Each user will receive a private message to inform them of Target's name.
                         You can provide an optional message to inform your team about budget or deadline.
                     </p>
                 </div>
                 <div class="is-center pure-u-1 pure-u-md-1-1 pure-u-lg-3-5">
                     <img class="pure-img-responsive" alt="Sample message received by users" src="{{ asset('images/slack-sample.png') }}">
                 </div>
-            </div>
-        </div>
-
-        <div class="content why-block">
-            <h2 class="content-head is-center">Why do I need this app?</h2>
-
-            <p>
-                At <a href="https://jolicode.com/">JoliCode</a>, we do a Secret Santa every year. Before this application,
-                we had to ask someone from outside the company to be our "Secret Santa", running a script to dispatch users
-                and sending emails to everyone.
-            </p>
-
-            <p>
-                This time is gone! Because all our collaborators are on Slack, we can just select them from this interface
-                and the application does all the work to shuffle users and to inform them of their peer name.
-            </p>
-        </div>
-
-        <div class="content love-block pure-g">
-            <div class="pure-u-1">
-                <h2 class="content-head">Enjoy gifts, love and privacy</h2>
-                <p>
-                    Secret Santa is about sharing and having a good time! This application does not collect any personal information, does not use web analytics, does not need any registration, does not send spam, is totally free to use and is integrally <a href="https://github.com/jolicode/secret-santa/">open-source</a>.
-                </p>
             </div>
         </div>
     </div>
