--- a/templates/content/stats.html.twig
+++ b/templates/content/stats.html.twig
@@ -21,18 +21,18 @@
     <div class="stats">
         <div class="jumbotron">
             <div class="jumbotron-inner">
-                <h1>Secret Santa Statistics</h1>
+                <h1>FireFight Game Statistics</h1>
                 <p>
-                    Ho, ho, ho, here are the statistics of Secret Santa
-                    <small>(since 10/2018)</small>
+                    Yo! Here are the statistics of FireFight
+                    <small>(since 8/2019)</small>
                 </p>
             </div>
         </div>
 
         <div class="container-charts">
-            {{ stats.barGraph('Number of Secret Santa per month', counters.month) }}
-            {{ stats.barGraph('Number of Secret Santa per year', counters.year) }}
-            {{ stats.barGraph('Number of Secret Santa per application', counters.app) }}
+            {{ stats.barGraph('Number of FireFights per month', counters.month) }}
+            {{ stats.barGraph('Number of FireFights per year', counters.year) }}
+            {{ stats.barGraph('Number of FireFights per application', counters.app) }}
         </div>
     </div>
 
