--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -2,8 +2,8 @@
 
 {% block seo %}
     {{ include('_seo.html.twig', {
-        title: 'Secret Santa - Frequently asked questions',
-        description: 'Frequently asked questions when using Secret Santa',
+        title: 'FireFight - Frequently asked questions',
+        description: 'Frequently asked questions when using the FireFight Targeting System',
     }) }}
 {% endblock %}
 
@@ -24,7 +24,7 @@
                         </p>
                         <p>
                             <em>Detailled answer:</em>
-                            We receive only the data mandatory to start the Secret Santa:
+                            We receive only the data mandatory to run a targeting operation:
                             the list of users and usergroups in your organization. Once the private messages have been sent,
                             we forget everything! In fact, we do not even have a database 😮
                         </p>
@@ -35,7 +35,7 @@
                         </h2>
                         <p>
                             No, the association is purely random so you cannot do that with our application.
-                            An alternative could be to launch 2 Secret Santa with two groups of people.
+                            An alternative could be to launch 2 targeting operations with two groups of people.
                         </p>
                     </li>
                     <li id="new-participant">
@@ -43,18 +43,8 @@
                             <a href="#new-participant">Can I add a new participant once messages have been sent?</a>
                         </h2>
                         <p>
-                            No, you can't. However, you can still start a new Secret Santa. We advice you to add a note in the
+                            No, you can't. However, you can still start a new game. We advice you to add a note in the
                             message mentioning that this new draw cancel and replace the old one.
-                        </p>
-                    </li>
-                    <li id="hall-of-fame">
-                        <h2>
-                            <a href="#hall-of-fame">How can I add my company / organization to your Hall of Fame?</a>
-                        </h2>
-                        <p>
-                            Simply drop us an email at <a href="mailto:hello@secret-santa.team">hello@secret-santa.team</a>
-                            with the name, url and logo of the entity you want to add. It's free but if you want to tweet
-                            or share our app to the world, you are more than welcome.
                         </p>
                     </li>
                     <li id="big-team">
@@ -64,23 +54,23 @@
                         <p>
                             There is a 2 things to understand here. The first step in our application is to retrieve
                             all the users on your Slack workspace / Discord server - yes we retrieve all the users to allow
-                            you to select the ones that will participate to your Secret Santa.
+                            you to select the ones that will participate in your game.
                         </p>
                         <p>
                             When your team is really big, Slack or Discord APIs can fail to send us all the users in a
-                            reasonable duration. That means you will no be able to start a Secret Santa. A
+                            reasonable duration. That means you will no be able to start a targeting operation. A
                             possible workaround would be to create a new Slack workspace / Discord server with only the
                             participants.
                         </p>
                         <p>
                             The second step is to dispatch a private message to all the selected users. Even if you started
-                            a Secret Santa with a lot of participants, the application will send all the messages progressively.
+                            a targeting operation with a lot of participants, the application will send all the messages progressively.
                             So there should not be any problem here.
                         </p>
                     </li>
                     <li id="invalid-user">
                         <h2>
-                            <a href="#invalid-user">Why did someone receive <code>@invalid-user</code> as the person to gift?</a>
+                            <a href="#invalid-user">Why did someone receive <code>@invalid-user</code> as their target?</a>
                         </h2>
                         <p>
                             This is due to a known bug of the Discord Android application. The workaround is to open the
@@ -94,5 +84,5 @@
 {% endblock content %}
 
 {% block contact %}
-    <a href="mailto:hello@secret-santa.team" class="support-link"><i class="fas fa-question"></i> Did not find an answer to your question? Contact us!</a>
+    <a href="mailto:kmcneil@fieldedge.com" class="support-link"><i class="fas fa-question"></i> Did not find an answer to your question? Contact Ki!</a>
 {% endblock contact %}
