--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -6,8 +6,8 @@
             <h2>An unexpected error happened!</h2>
 
             <p>
-                Our application was not able to do what you asked for. That's unfortunate and we hope it didn't break Christmas.
-                Feel free to <a href="mailto:hello@secret-santa.team">contact us</a> if you need assistance!
+                Our application was not able to do what you asked for. That's unfortunate.
+                Feel free to <a href="mailto:kmcneil@fieldedge.com">contact Ki</a> if you need assistance!
             </p>
 
             <p>
@@ -26,9 +26,9 @@
                 Go back to home page
             </a>
 
-            <a href="mailto:hello@secret-santa.team" class="big-button">
+            <a href="mailto:kmcneil@fieldedge.com" class="big-button">
                 <span class="far fa-life-ring" aria-hidden="true"></span>
-                Contact support
+                Contact Ki
             </a>
         </div>
     </div>
