--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -9,7 +9,7 @@
                 <div class="pure-g">
                     <div class="pure-u-1 pure-u-lg-1-2 user-field run-step">
                         <div class="run-column">
-                            <h2>Select the participants of your Secret Santa</h2>
+                            <h2>Select the participants of this game</h2>
                             {% if errors and errors.users %}
                                 <span class="error"><i class="fas fa-exclamation-triangle"></i> {{ errors.users|join('<br />') }}</span>
                             {% endif %}
@@ -68,7 +68,7 @@
                                             <label class="control-label" for="message">Write an optional message</label>
                                         </h2>
 
-                                        <textarea name="message" id="message" rows="5" placeholder="Anything you want, but this is the right place to give a deadline and a price limit!">{{ message }}</textarea>
+                                        <textarea name="message" id="message" rows="5" placeholder="Anything you want, If you have an expected time limit or announcements there should go here!">{{ message }}</textarea>
 
                                         {% if admin %}
                                             <p class="help">
@@ -89,13 +89,13 @@
 
                                         <p>
                                             We are going to shuffle selected users and send them a private message to inform them
-                                            of their peer name.
+                                            of their first target's name.
                                         </p>
 
                                         <div class="is-center">
                                             <button type="submit" class="big-button" id="submit-button">
                                                 <span class="fas fa-paper-plane" aria-hidden="true"></span>
-                                                Finish and send Secret Santa messages!
+                                                Finish and send the FireFight Targeting messages!
                                             </button>
                                         </div>
 
@@ -157,7 +157,7 @@
                         })
                         .then(function(response) {
                             if (response.success) {
-                                window.alert('The sample message have been sent successfully. Check it now before finishing the Secret Santa.');
+                                window.alert('The sample message have been sent successfully. Check it now before finish game targeting.');
                                 return;
                             }
 
@@ -492,7 +492,7 @@
             </script>
         {% else %}
             <div class="error" role="alert">
-                Ooops, we didn't find enough users in your team. You need at least 2 users to start a Secret Santa.
+                Ooops, we didn't find enough users in your team. You need at least 2 users to start targeting.
             </div>
         {% endif %}
     </div>
